--- a/syntax_sprint/templates/login.html
+++ b/syntax_sprint/templates/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -24,7 +26,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{% static 'styles.css' %}" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
@@ -87,23 +89,6 @@
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                  <!-- Name input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="name"
-                      type="text"
-                      placeholder="Enter your name..."
-                      data-sb-validations="required"
-                    />
-                    <label for="name">Nombre y apellidos</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="name:required"
-                    >
-                      Se requiere un nombre.
-                    </div>
-                  </div>
                   <!-- Email address input-->
                   <div class="form-floating mb-3">
                     <input
@@ -127,41 +112,24 @@
                       El Email no es válido.
                     </div>
                   </div>
-                  <!-- Phone number input-->
+                  <!-- Password input-->
                   <div class="form-floating mb-3">
                     <input
                       class="form-control"
-                      id="phone"
-                      type="tel"
-                      placeholder="(123) 456-7890"
+                      id="password"
+                      type="text"
+                      placeholder="Enter your password..."
                       data-sb-validations="required"
                     />
-                    <label for="phone">Teléfono</label>
+                    <label for="password">Contraseña</label>
                     <div
                       class="invalid-feedback"
-                      data-sb-feedback="phone:required"
+                      data-sb-feedback="password:required"
                     >
-                      Se requiere un número de teléfono.
+                      Se requiere una contraseña.
                     </div>
                   </div>
-                  <!-- Message input-->
-                  <div class="form-floating mb-3">
-                    <textarea
-                      class="form-control"
-                      id="message"
-                      type="text"
-                      placeholder="Enter your message here..."
-                      style="height: 10rem"
-                      data-sb-validations="required"
-                    ></textarea>
-                    <label for="message">Mensaje</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="message:required"
-                    >
-                      Se requiere un mensaje.
-                    </div>
-                  </div>
+
                   <!-- Submit success message-->
                   <!---->
                   <!-- This is what your users will see when the form-->
@@ -202,6 +170,169 @@
           </div>
         </div>
       </section>
+
+      <!-- Page content-->
+      <section class="py-5">
+        <div class="container px-5">
+          <!-- Contact form-->
+          <div class="bg-light rounded-4 py-5 px-4 px-md-5">
+            <div class="text-center mb-5">
+              <div
+                class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"
+              >
+                <i class="bi bi-envelope"></i>
+              </div>
+              <h1 class="fw-bolder">Registrarse</h1>
+              <p class="lead fw-normal text-muted mb-0">O iniciar sesión</p>
+            </div>
+            <div class="row gx-5 justify-content-center">
+              <div class="col-lg-8 col-xl-6">
+                <!-- * * * * * * * * * * * * * * *-->
+                <!-- * * SB Forms Contact Form * *-->
+                <!-- * * * * * * * * * * * * * * *-->
+                <!-- This form is pre-integrated with SB Forms.-->
+                <!-- To make this form functional, sign up at-->
+                <!-- https://startbootstrap.com/solution/contact-forms-->
+                <!-- to get an API token!-->
+                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                  <!-- Name input-->
+                  <div class="form-floating mb-3">
+                    <input
+                      class="form-control"
+                      id="name"
+                      type="text"
+                      placeholder="Enter your name..."
+                      data-sb-validations="required"
+                    />
+                    <label for="name">Usuario</label>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="name:required"
+                    >
+                      Se requiere un usuario.
+                    </div>
+                  </div>
+                  <!-- Email address input-->
+                  <div class="form-floating mb-3">
+                    <input
+                      class="form-control"
+                      id="email"
+                      type="email"
+                      placeholder="name@example.com"
+                      data-sb-validations="required,email"
+                    />
+                    <label for="email">Email</label>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="email:required"
+                    >
+                      Se requiere un Email.
+                    </div>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="email:email"
+                    >
+                      El Email no es válido.
+                    </div>
+                  </div>
+                  <!-- Email address input-->
+                  <div class="form-floating mb-3">
+                    <input
+                      class="form-control"
+                      id="email"
+                      type="email"
+                      placeholder="name@example.com"
+                      data-sb-validations="required,email"
+                    />
+                    <label for="email">Verificar Email</label>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="email:required"
+                    >
+                      Se requiere verificar Email.
+                    </div>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="email:email"
+                    >
+                      El Email no es válido.
+                    </div>
+                  </div>
+                  <!-- Password input-->
+                  <div class="form-floating mb-3">
+                    <input
+                      class="form-control"
+                      id="password"
+                      type="text"
+                      placeholder="Enter your password..."
+                      data-sb-validations="required"
+                    />
+                    <label for="password">Contraseña</label>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="password:required"
+                    >
+                      Se requiere una contraseña.
+                    </div>
+                  </div>
+                  <!-- Password input-->
+                  <div class="form-floating mb-3">
+                    <input
+                      class="form-control"
+                      id="password"
+                      type="text"
+                      placeholder="Enter your password..."
+                      data-sb-validations="required"
+                    />
+                    <label for="password">Verificar contraseña</label>
+                    <div
+                      class="invalid-feedback"
+                      data-sb-feedback="password:required"
+                    >
+                      Se requiere verificar contraseña.
+                    </div>
+                  </div>
+
+                  <!-- Submit success message-->
+                  <!---->
+                  <!-- This is what your users will see when the form-->
+                  <!-- has successfully submitted-->
+                  <div class="d-none" id="submitSuccessMessage">
+                    <div class="text-center mb-3">
+                      <div class="fw-bolder">Regístrate</div>
+                      To activate this form, sign up at
+                      <br />
+                      <a
+                        href="https://startbootstrap.com/solution/contact-forms"
+                        >https://startbootstrap.com/solution/contact-forms</a
+                      >
+                    </div>
+                  </div>
+                  <!-- Submit error message-->
+                  <!---->
+                  <!-- This is what your users will see when there is-->
+                  <!-- an error submitting the form-->
+                  <div class="d-none" id="submitErrorMessage">
+                    <div class="text-center text-danger mb-3">
+                      Error al registrarte
+                    </div>
+                  </div>
+                  <!-- Submit Button-->
+                  <div class="d-grid">
+                    <button
+                      class="btn btn-primary btn-lg disabled"
+                      id="submitButton"
+                      type="submit"
+                    >
+                      Registrarte
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer-->
     <footer class="bg-white py-4 mt-auto">
@@ -227,7 +358,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
