--- a/syntax_sprint/templates/settings.html
+++ b/syntax_sprint/templates/settings.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -24,7 +26,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{% static 'styles.css' %}" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
@@ -159,6 +161,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
