--- a/syntax_sprint/templates/login.html
+++ b/syntax_sprint/templates/login.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="login.html">Iniciar sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Sobre SyntaxSprint</a>
+                <a class="nav-link" href="singup.html">Registrarse</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="settings.html">Ajustes</a>
@@ -68,7 +68,7 @@
       <!-- Page content-->
       <section class="py-5">
         <div class="container px-5">
-          <!-- Contact form-->
+          <!-- Login form-->
           <div class="bg-light rounded-4 py-5 px-4 px-md-5">
             <div class="text-center mb-5">
               <div
@@ -77,7 +77,6 @@
                 <i class="bi bi-envelope"></i>
               </div>
               <h1 class="fw-bolder">Iniciar sesión</h1>
-              <p class="lead fw-normal text-muted mb-0">O regístrate</p>
             </div>
             <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
@@ -88,7 +87,12 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <form
+                  action=""
+                  method="POST"
+                  id="contactForm"
+                  data-sb-form-api-token="API_TOKEN"
+                >
                   <!-- Email address input-->
                   <div class="form-floating mb-3">
                     <input
@@ -112,12 +116,13 @@
                       El Email no es válido.
                     </div>
                   </div>
+
                   <!-- Password input-->
                   <div class="form-floating mb-3">
                     <input
                       class="form-control"
                       id="password"
-                      type="text"
+                      type="password"
                       placeholder="Enter your password..."
                       data-sb-validations="required"
                     />
@@ -158,173 +163,10 @@
                   <div class="d-grid">
                     <button
                       class="btn btn-primary btn-lg disabled"
-                      id="submitButton"
+                      id="submit"
                       type="submit"
                     >
                       Iniciar sesión
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Page content-->
-      <section class="py-5">
-        <div class="container px-5">
-          <!-- Contact form-->
-          <div class="bg-light rounded-4 py-5 px-4 px-md-5">
-            <div class="text-center mb-5">
-              <div
-                class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"
-              >
-                <i class="bi bi-envelope"></i>
-              </div>
-              <h1 class="fw-bolder">Registrarse</h1>
-              <p class="lead fw-normal text-muted mb-0">O iniciar sesión</p>
-            </div>
-            <div class="row gx-5 justify-content-center">
-              <div class="col-lg-8 col-xl-6">
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                  <!-- Name input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="name"
-                      type="text"
-                      placeholder="Enter your name..."
-                      data-sb-validations="required"
-                    />
-                    <label for="name">Usuario</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="name:required"
-                    >
-                      Se requiere un usuario.
-                    </div>
-                  </div>
-                  <!-- Email address input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="email"
-                      type="email"
-                      placeholder="name@example.com"
-                      data-sb-validations="required,email"
-                    />
-                    <label for="email">Email</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:required"
-                    >
-                      Se requiere un Email.
-                    </div>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:email"
-                    >
-                      El Email no es válido.
-                    </div>
-                  </div>
-                  <!-- Email address input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="email"
-                      type="email"
-                      placeholder="name@example.com"
-                      data-sb-validations="required,email"
-                    />
-                    <label for="email">Verificar Email</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:required"
-                    >
-                      Se requiere verificar Email.
-                    </div>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:email"
-                    >
-                      El Email no es válido.
-                    </div>
-                  </div>
-                  <!-- Password input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="password"
-                      type="text"
-                      placeholder="Enter your password..."
-                      data-sb-validations="required"
-                    />
-                    <label for="password">Contraseña</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="password:required"
-                    >
-                      Se requiere una contraseña.
-                    </div>
-                  </div>
-                  <!-- Password input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="password"
-                      type="text"
-                      placeholder="Enter your password..."
-                      data-sb-validations="required"
-                    />
-                    <label for="password">Verificar contraseña</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="password:required"
-                    >
-                      Se requiere verificar contraseña.
-                    </div>
-                  </div>
-
-                  <!-- Submit success message-->
-                  <!---->
-                  <!-- This is what your users will see when the form-->
-                  <!-- has successfully submitted-->
-                  <div class="d-none" id="submitSuccessMessage">
-                    <div class="text-center mb-3">
-                      <div class="fw-bolder">Regístrate</div>
-                      To activate this form, sign up at
-                      <br />
-                      <a
-                        href="https://startbootstrap.com/solution/contact-forms"
-                        >https://startbootstrap.com/solution/contact-forms</a
-                      >
-                    </div>
-                  </div>
-                  <!-- Submit error message-->
-                  <!---->
-                  <!-- This is what your users will see when there is-->
-                  <!-- an error submitting the form-->
-                  <div class="d-none" id="submitErrorMessage">
-                    <div class="text-center text-danger mb-3">
-                      Error al registrarte
-                    </div>
-                  </div>
-                  <!-- Submit Button-->
-                  <div class="d-grid">
-                    <button
-                      class="btn btn-primary btn-lg disabled"
-                      id="submitButton"
-                      type="submit"
-                    >
-                      Registrarte
                     </button>
                   </div>
                 </form>
