--- a/syntax_sprint/templates/settings.html
+++ b/syntax_sprint/templates/settings.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="login.html">Iniciar sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Sobre SyntaxSprint</a>
+                <a class="nav-link" href="singup.html">Registrarse</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="settings.html">Ajustes</a>
