--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="login.html">Iniciar sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="singup.html">Registrarse</a>
+                <a class="nav-link" href="signup.html">Registrarse</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="settings.html">Ajustes</a>
@@ -73,7 +73,8 @@
               <!-- Header text content-->
               <div>
                 <h1 class="display-2 fw-bolder mb-8">
-                  <span class="text-gradient d-inline"
+                  <span
+                    class="text-gradient row d-flex justify-content-center align-items-center h-100"
                     >¿Qué tan rápido eres escribiendo código?</span
                   >
                 </h1>
