--- a/syntax_sprint/templates/login.html
+++ b/syntax_sprint/templates/login.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="login.html">Iniciar sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="singup.html">Registrarse</a>
+                <a class="nav-link" href="signup.html">Registrarse</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="settings.html">Ajustes</a>
@@ -68,111 +68,92 @@
       <!-- Page content-->
       <section class="py-5">
         <div class="container px-5">
-          <!-- Login form-->
-          <div class="bg-light rounded-4 py-5 px-4 px-md-5">
-            <div class="text-center mb-5">
+          <section class="vh-100" style="background-color: #0000">
+            <div class="container h-100">
               <div
-                class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"
+                class="row d-flex justify-content-center align-items-center h-100"
               >
-                <i class="bi bi-envelope"></i>
-              </div>
-              <h1 class="fw-bolder">Iniciar sesión</h1>
-            </div>
-            <div class="row gx-5 justify-content-center">
-              <div class="col-lg-8 col-xl-6">
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form
-                  action=""
-                  method="POST"
-                  id="contactForm"
-                  data-sb-form-api-token="API_TOKEN"
-                >
-                  <!-- Email address input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="email"
-                      type="email"
-                      placeholder="name@example.com"
-                      data-sb-validations="required,email"
-                    />
-                    <label for="email">Email</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:required"
-                    >
-                      Se requiere un Email.
-                    </div>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="email:email"
-                    >
-                      El Email no es válido.
-                    </div>
-                  </div>
+                <div class="col-lg-12 col-xl-11">
+                  <div class="card text-black" style="border-radius: 25px">
+                    <div class="card-body p-md-5">
+                      <div class="row justify-content-center">
+                        <div
+                          class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1"
+                        >
+                          <p
+                            class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4"
+                          >
+                            Iniciar sesión
+                          </p>
 
-                  <!-- Password input-->
-                  <div class="form-floating mb-3">
-                    <input
-                      class="form-control"
-                      id="password"
-                      type="password"
-                      placeholder="Enter your password..."
-                      data-sb-validations="required"
-                    />
-                    <label for="password">Contraseña</label>
-                    <div
-                      class="invalid-feedback"
-                      data-sb-feedback="password:required"
-                    >
-                      Se requiere una contraseña.
-                    </div>
-                  </div>
+                          <form action="" method="POST" class="mx-1 mx-md-4">
+                            <div
+                              class="d-flex flex-row align-items-center mb-4"
+                            >
+                              <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                            </div>
 
-                  <!-- Submit success message-->
-                  <!---->
-                  <!-- This is what your users will see when the form-->
-                  <!-- has successfully submitted-->
-                  <div class="d-none" id="submitSuccessMessage">
-                    <div class="text-center mb-3">
-                      <div class="fw-bolder">Sesión iniciada</div>
-                      To activate this form, sign up at
-                      <br />
-                      <a
-                        href="https://startbootstrap.com/solution/contact-forms"
-                        >https://startbootstrap.com/solution/contact-forms</a
-                      >
+                            <div
+                              class="d-flex flex-row align-items-center mb-4"
+                            >
+                              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                              <div
+                                data-mdb-input-init
+                                class="form-outline flex-fill mb-0"
+                              >
+                                <input
+                                  type="email"
+                                  name="email"
+                                  class="form-control"
+                                  placeholder="Email"
+                                />
+                              </div>
+                            </div>
+
+                            <div
+                              class="d-flex flex-row align-items-center mb-4"
+                            >
+                              <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                              <div
+                                data-mdb-input-init
+                                class="form-outline flex-fill mb-0"
+                              >
+                                <input
+                                  type="password"
+                                  name="password"
+                                  class="form-control"
+                                  placeholder="Contraseña"
+                                />
+                              </div>
+                            </div>
+
+                            <div
+                              class="d-flex flex-row align-items-center mb-4"
+                            >
+                              <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                            </div>
+
+                            <div
+                              class="d-flex justify-content-center mx-4 mb-3 mb-lg-4"
+                            >
+                              <button
+                                type="submit"
+                                data-mdb-button-init
+                                data-mdb-ripple-init
+                                class="btn btn-primary btn-lg"
+                              >
+                                Conectarse
+                              </button>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <!-- Submit error message-->
-                  <!---->
-                  <!-- This is what your users will see when there is-->
-                  <!-- an error submitting the form-->
-                  <div class="d-none" id="submitErrorMessage">
-                    <div class="text-center text-danger mb-3">
-                      Error al iniciar sesión
-                    </div>
-                  </div>
-                  <!-- Submit Button-->
-                  <div class="d-grid">
-                    <button
-                      class="btn btn-primary btn-lg disabled"
-                      id="submit"
-                      type="submit"
-                    >
-                      Iniciar sesión
-                    </button>
-                  </div>
-                </form>
+                </div>
               </div>
             </div>
-          </div>
+          </section>
         </div>
       </section>
     </main>
