--- a/syntax_sprint/templates/settings.html
+++ b/syntax_sprint/templates/settings.html
@@ -33,7 +33,7 @@
       <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="{% url 'index' %}"
             ><span class="fw-bolder text-primary">SyntaxSprint</span></a
           >
           <button
@@ -50,17 +50,27 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="{% url 'index' %}">Inicio</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'settings' %}">Ajustes</a>
+              </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <span class="nav-link">Hola, {{ user.username }}</span>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Iniciar sesión</a>
+                <a class="nav-link" href="#">Cerrar sesión</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="signup.html">Registrarse</a>
+                <a class="nav-link" href="{% url 'signup' %}">Registrarse</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="settings.html">Ajustes</a>
-              </li>
+              {% endif %}
             </ul>
           </div>
         </div>
