--- a/syntax_sprint/templates/login.html
+++ b/syntax_sprint/templates/login.html
@@ -86,7 +86,20 @@
                             Iniciar sesión
                           </p>
 
+                          <!-- mensaje de error-->
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <style>
+                              h5 {
+                                color: red;
+                              }
+                            </style>
+                            {% if messages %} {% for message in messages %}
+                            <h5 class="text-center">{{ message }}</h5>
+                            {% endfor %} {% endif %}
+                          </div>
+
                           <form action="" method="POST" class="mx-1 mx-md-4">
+                            {% csrf_token %}
                             <div
                               class="d-flex flex-row align-items-center mb-4"
                             >
@@ -96,16 +109,16 @@
                             <div
                               class="d-flex flex-row align-items-center mb-4"
                             >
-                              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                              <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                               <div
                                 data-mdb-input-init
                                 class="form-outline flex-fill mb-0"
                               >
                                 <input
-                                  type="email"
-                                  name="email"
+                                  type="text"
+                                  name="username"
                                   class="form-control"
-                                  placeholder="Email"
+                                  placeholder="Nombre de usuario"
                                 />
                               </div>
                             </div>
