--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -8,29 +8,27 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>SyntaxSprint - Carrera de código</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Custom Google font-->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{% static 'assets/favicon.ico' %}"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
       rel="stylesheet"
     />
-    <!-- Bootstrap icons-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'styles.css' %}" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
-      <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
           <a class="navbar-brand" href="{% url 'index' %}"
@@ -52,7 +50,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Inicio</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'settings' %}">Ajustes</a>
               </li>
@@ -75,12 +72,11 @@
           </div>
         </div>
       </nav>
-      <!-- Header-->
+
       <header class="py-5">
         <div class="container-fluid px-5 pb-5">
           <div class="row gx-5 align-items-center h-100">
             <div class="col-xxl-5 mx-auto">
-              <!-- Header text content-->
               <div>
                 <h1 class="display-2 fw-bolder mb-8">
                   <span
@@ -88,21 +84,64 @@
                     >¿Qué tan rápido eres escribiendo código?</span
                   >
                 </h1>
-                <div
-                  class="d-grid gap-3 d-sm-flex justify-content-sm-center mb-3"
-                >
-                  <a
-                    class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                    href="#!"
-                    >Iniciar Test</a
+
+                <div class="container mt-5">
+                  <div
+                    class="d-grid gap-3 d-sm-flex justify-content-sm-center mb-3"
                   >
+                    <button
+                      id="start-test"
+                      class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
+                    >
+                      Iniciar Test
+                    </button>
+                  </div>
+                  <div id="gist-content" class="mt-5"></div>
                 </div>
+
+                <script>
+                  $(document).ready(function () {
+                    $("#start-test").click(function () {
+                      console.log("Botón 'Iniciar Test' clickeado");
+                      $.ajax({
+                        url: "{% url 'get_python_gist' %}",
+                        method: "GET",
+                        success: function (data) {
+                          console.log("Respuesta recibida:", data);
+                          if (data.error) {
+                            $("#gist-content").html(
+                              '<div class="alert alert-danger" role="alert">' +
+                                data.error +
+                                "</div>"
+                            );
+                          } else {
+                            $("#gist-content").html(
+                              "<h2>Función: " +
+                                data.name +
+                                "</h2><pre>" +
+                                data.code +
+                                "</pre>"
+                            );
+                          }
+                        },
+                        error: function (xhr, status, error) {
+                          console.log("Error en la solicitud AJAX:", error);
+                          $("#gist-content").html(
+                            '<div class="alert alert-danger" role="alert">Error al obtener el Gist: ' +
+                              error +
+                              "</div>"
+                          );
+                        },
+                      });
+                    });
+                  });
+                </script>
               </div>
             </div>
           </div>
         </div>
       </header>
-      <!-- About Section-->
+
       <section class="bg-light py-5">
         <div class="container px-5">
           <div class="row gx-5 justify-content-center">
@@ -131,7 +170,7 @@
         </div>
       </section>
     </main>
-    <!-- Footer-->
+
     <footer class="bg-white py-4 mt-auto">
       <div class="container px-5">
         <div
@@ -152,9 +191,8 @@
         </div>
       </div>
     </footer>
-    <!-- Bootstrap core JS-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
