--- a/syntax_sprint/templates/settings.html
+++ b/syntax_sprint/templates/settings.html
@@ -61,7 +61,7 @@
                 <span class="nav-link">Hola, {{ user.username }}</span>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cerrar sesión</a>
+                <a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
               </li>
               {% else %}
               <li class="nav-item">
