--- a/syntax_sprint/templates/login.html
+++ b/syntax_sprint/templates/login.html
@@ -9,7 +9,18 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>SyntaxSprint - Carrera de código</title>
+
+    <!-- Enlace al favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+
+    <!-- Enlace al CSS de Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Enlace a styles.css, asegurándote de que se carga después de Bootstrap -->
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 
     <style>
       :root {
@@ -20,11 +31,8 @@
         --gray: #999;
       }
 
-      /* Mantén el fondo de la página */
       body {
         font-family: Menlo, monospace;
-        padding: 32px;
-        background: var(--black);
         color: white;
       }
 
