trabajando en la lógica de los tests

--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -68,8 +68,8 @@
       <div id="test-area"></div>
     </main>
     <footer>
-      <div>Copyright &copy; Crédito a los respectivos autores</div>
-      <div>
+      <div class="copyright">Copyright &copy; Crédito a los respectivos autores</div>
+      <div class="links">
         <a href="#!">LinkedIn</a>
         <span class="mx-1">&middot;</span>
         <a href="#!">GitHub</a>
