--- a/syntax_sprint/static/css/styles.css
+++ b/syntax_sprint/static/css/styles.css
@@ -6,7 +6,6 @@
     --black: #2b2d30;
     --gray: #999;
     --white: #fff;
-    --sky: #17e7ea;
   }
 
   
@@ -15,6 +14,7 @@
     background: var(--black);
     font-family: Menlo, monospace;
     display: grid;
+    flex-direction: column;
     padding: 32px;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,8 @@
   }
 
   time {
-    color: var(--yellow)
+    color: var(--yellow);
+    font-size: 25px;
   }
 
   input {
@@ -112,6 +113,17 @@
     margin-top: 16px; /* Espacio entre el test y los resultados */
   }
 
+  pre {
+    white-space: pre-wrap;
+    background: #333;
+    color: #fff;
+    padding: 1000px;
+    border-radius: 5px;
+    max-width: 100%; /* Asegúrate de que ocupe el ancho disponible */
+    overflow-x: auto; /* Permite el scroll horizontal si el contenido es muy largo */
+}
+
+
   h2 {
     font-weight: 400;
     opacity: .4;
@@ -170,6 +182,7 @@
     font-size: 26px; /* Tamaño del texto específico para 'SyntaxSprint' */
     text-decoration: none;
     font-weight: bold; /* Mantén el texto en negrita */
+    margin-left: 50px;
 }
 
 .syntax {
@@ -248,4 +261,48 @@ button#start-test:hover {
   margin-top: 32px; /* Espacio entre el botón y el área de test */
   width: 100%; /* Asegura que ocupe el ancho disponible */
   max-width: 800px; /* Limita el ancho máximo del área de test */
+}
+
+
+
+
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  color: var(--gray);
+  width: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000; /* Asegura que el footer esté encima de otros elementos */
+}
+
+.copyright {
+  text-align: left;
+  margin-left: 58px;
+}
+
+.links {
+  text-align: right;
+  margin-right: 16px;
+}
+
+.links a {
+  color: var(--gray);
+  text-decoration: none;
+  margin: 0 8px;
+  transition: color 0.3s ease;
+}
+
+.links a:hover {
+  color: var(--yellow);
+}
+
+.mx-1 {
+  margin: 0 4px;
 }
